2002-01-08  Andreas J. Guelzow  <aguelzow@taliesin.ca>

	* analysis-tools.c (average_tool) : calculate standard errors

2002-01-07  Jody Goldberg <jody@gnome.org>

	* src/formats.c (currency_symbol) : add RUR.

	* src/value.c (value_get_as_int) : be extra careful.

2002-01-07  Andreas J. Guelzow  <aguelzow@taliesin.ca>

	* analysis-tools.c (ranking_tool) : calculate rank for ties
	  based on av_ties_flag

2002-01-07  Andreas J. Guelzow  <aguelzow@taliesin.ca>

	* analysis-tools.h : add autofit_flag to data_analysis_output_t
	* analysis-tools.c : insert lots of calls to autofit_columns
	(autofit_columns) : new procedure
	
2002-01-07  Morten Welinder  <welinder@rentec.com>

	* configure.in: check for ieee754.h

2002-01-06  Jody Goldberg <jody@gnome.org>

	* configure.in : post release bump.

2002-01-06  Jody Goldberg <jody@gnome.org>

	* Release 1.0.1

2002-01-05  Jody Goldberg <jody@gnome.org>

	* src/workbook-control.c (wb_control_parse_and_jump) : rename from
	  workbook_parse_and_jump to be consistent.

	* configure.in : bump gal version req.

2002-01-04  Jody Goldberg <jody@gnome.org>

	* src/commands.c (cmd_insert_rows) : dup the string.
	(cmd_insert_cols) : ditto.

	* src/eval.c (dependent_unlink) : add some safety.  Default to A1 if
	  no position is supplied.

	* src/gnumeric-graph.c (gnm_graph_series_get_dimension) : more
	  protection for missing series.
	(gnm_graph_series_add_dimension) : ditto.

2002-01-03  Morten Welinder  <terra@diku.dk>

	* src/datetime.c (datetime_serial_to_timet): New function.

2002-01-03  J.H.M. Dassen (Ray) <jdassen@debian.org>

	* src/auto-correct.c (autocorrect_tool) : casts to deal with character 
	  (un)signedness.
	* src/format.c (format_entry_dtor) : switch to gchar to deal with
	  character (un)signeness.
	* src/format.c (lookup_color) : ditto
	* src/format.c (lookup_color_by_name) : ditto
	* src/format.c (render_number) : ditto
	* src/format.c (format_number) : switch to guchar; some casts