@@ -35,7 +35,7 @@ enum Value_Class {
 	VALUE_CLASS_FORMULA = 8,
 	VALUE_CLASS_ERROR   = 16,
 	VALUE_CLASS_ARRAY   = 64,
-	VALUE_CLASS_BOGUS   = -1,
+	VALUE_CLASS_BOGUS   = -1
 };
 
 
