@@ -1,3 +1,8 @@
+2002-01-08  Morten Welinder  <terra@diku.dk>
+
+	* fn-eng.c (gnumeric_convert): Kill comma before closing brace.
+	* fn-information.c (enum Value_Class): Ditto.
+
 2002-01-06  Jody Goldberg <jody@gnome.org>
 
 	* Release 1.0.1
